--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 4.0)
 
-project(4004asm VERSION 1.0)
+project(i4004asm VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -12,8 +12,8 @@ FetchContent_Declare(
   GIT_REPOSITORY https://github.com/fmtlib/fmt
   GIT_TAG        12.1.0)
 
-add_executable(main src/main.cpp src/lexer.cpp src/tokens.cpp src/parser.cpp)
-target_link_libraries(main fmt::fmt)
+add_executable(i4004asm src/main.cpp src/lexer.cpp src/tokens.cpp src/parser.cpp)
+target_link_libraries(i4004asm fmt::fmt)
 
 # Tests
 FetchContent_Declare(
